Better vertical alignment for checkboxes in issues list

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -129,7 +129,7 @@ div.journal .details:hover { color:#222; }
 div.journal p { margin:5px 0; }
 div.journal div.contextual { margin-top:0; }
 table.issues td.assigned_to { white-space:nowrap; }
-table.issues td.checkbox input { margin: 4px 3px -2px 4px; }
+table.issues td.checkbox input { margin:3px 3px 4px 4px; }
 table.issues tr > td { padding:3px 2px 1px; }
 table.issues tr > td > table { margin-bottom:1px; }
 tr.issue td.project { max-width:200px !important; white-space:normal; }
